<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <EditText
        android:id="@+id/startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/startTime"/>

    <EditText
        android:id="@+id/endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/startTime"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/endTime"/>

    <TextView
        android:id="@+id/rootActivitiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rootActivities"
        app:layout_constraintTop_toBottomOf="@id/endTime"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rootActivitiesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rootActivitiesTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp">



    </androidx.recyclerview.widget.RecyclerView>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rootActivitiesList"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:entries="@array/typeItems"
        />

    <Spinner
        android:id="@+id/formatSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/typeSpinner"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:entries="@array/formatItems"
        />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/done"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/doneButton"
        android:text="@string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>